# ocrstruct

./: .gitignore  AGENTS.md  MEMO.md  README.md  image_screening_eval.md  middle_to_elements.py  mocrdown.sh  ocrstruct.sh  pdf.py  pyproject.toml  render_middle_htmls.py  sample_images.imageref.html  sample_images.imageref.json  sample_images.txt  screening.sh~  test.sh  types.py  understanding.sh~  validation_test.md  validation_test.py  xxx.list~
mocrdown/: __init__.py  cli.py  pdf.py
ocrstruct/: __init__.py  api.py  chunk.py  cli.py  html.py  image_screening.py  image_screening_cli.py  image_understanding.py  image_understanding_cli.py  math.py  middle.py  middle_to_elements.py  middle_to_html.py  middle_to_markdown.py  pdf.py  pdf_mineru.py  render_cli.py  result.py  style.html  table.py  types.py  utils.py  vlm.py
screening/: image_eval_analysis.autogen.html  image_eval_analysis.autogen.md  image_eval_analysis.for_pdf.md  image_eval_analysis.html  image_eval_analysis.lualatex.aux  image_eval_analysis.lualatex.tex  image_eval_analysis.md  image_eval_analysis.selfcontained.html  image_eval_results_new.jsonl  image_eval_results_v2.jsonl  minimal-lualatex.tex  models.md  print.css
scripts/: build_goldset_annotation_html.py  build_image_eval_analysis.py  build_image_understanding_analysis.py  build_image_understanding_viewer.py  build_imageref_from_list.py  list_middle_images.py  run_image_screening_eval.py  run_image_understanding_eval.py  screening.sh  summarize_image_screening_eval.py  understanding.sh
tests/: convert_test_data.py  test_html.py  test_image_understanding_api.py  test_middle_to_markdown.py  test_middle_unicode.py
understanding/: image_understanding_results.html  image_understanding_results.jsonl  (+9 more)
(+23 files in other folders)
