[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mocrdown"
version = "0.1.0"
description = "PDF to structured elements/markdown converter built on MinerU"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Team" }
]
dependencies = [
  "bs4>=0.0.2",
  "pydantic>=2.12.5",
  "mineru[core]>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.0.0",
]

[project.scripts]
mocrdown = "mocrdown.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mocrdown"]

[tool.pyright]
include = ["mocrdown", "tests"]
exclude = ["**/__pycache__"]
