[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ocrstruct"
version = "0.1.0"
description = "PDF to structured elements/markdown converter built on MinerU"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Your Team" }
]
dependencies = [
  "bs4>=0.0.2",
  "pydantic>=2.12.5",
  "mineru[core]==3.0.9",
  "openai>=2.31.0",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.0.0",
]

[project.scripts]
ocrstruct = "ocrstruct.cli:main"
ocrstruct-render = "ocrstruct.render_cli:main"
ocrstruct-screening = "ocrstruct.image_screening_cli:main"
ocrstruct-understanding = "ocrstruct.image_understanding_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ocrstruct"]

[tool.pyright]
include = ["ocrstruct", "tests"]
exclude = ["**/__pycache__"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
